# charming

./: Cargo.toml
charming/: Cargo.toml
charming/src/: lib.rs
charming/src/component/: angle_axis.rs  aria.rs  axis.rs  axis3d.rs  data_zoom.rs  geo.rs  geo_map.rs  grid.rs  grid3d.rs  legend.rs  parallel_axis.rs  parallel_coordinate.rs  polar_coordinate.rs  radar_coordinate.rs  radius_axis.rs  single_axis.rs  title.rs  toolbox.rs  visual_map.rs
charming/src/datatype/: datapoint.rs  dataset.rs  dimension.rs  source.rs  value.rs
charming/src/element/: anchor.rs  area_style.rs  axis_label.rs  axis_line.rs  axis_pointer.rs  axis_tick.rs  axis_type.rs  background.rs  blur.rs  border_type.rs  boundary_gap.rs  color.rs  coordinate.rs  coordinate_tooltip.rs  cursor.rs  dimension_encode.rs  emphasis.rs  formatter.rs  icon.rs  item_style.rs  label.rs  line_style.rs  link_target.rs  mark_area.rs  mark_line.rs  mark_point.rs  minor_split_line.rs  minor_tick.rs  name_location.rs  orient.rs  padding.rs  parallel_layout.rs  pointer.rs  raw_string.rs  scale_limit.rs  select.rs  shape.rs  sort.rs  split_area.rs  split_line.rs  (+5 more)
charming/src/renderer/: wasm_renderer.rs
charming/src/series/: bar.rs  bar3d.rs  boxplot.rs  candlestick.rs  custom.rs  effect_scatter.rs  funnel.rs  gauge.rs  graph.rs  heatmap.rs  line.rs  lines.rs  map.rs  mod.rs  parallel.rs  pictorial_bar.rs  pie.rs  radar.rs  sankey.rs  scatter.rs  sunburst.rs  theme_river.rs  tree.rs  treemap.rs
macros/: Cargo.toml
macros/src/: deserialize_as_remote.rs  lib.rs  serde_auto.rs
