[package]
authors = ["Yuankun Zhang <i@yuankun.me>"]
categories = ["visualization", "graphics"]
description = "A visualization library for Rust"
documentation = "https://github.com/yuankunzhang/echarts-rs"
edition = "2021"
homepage = "https://github.com/yuankunzhang/echarts-rs"
keywords = ["echarts", "visualization", "chart", "plot"]
license = "MIT/Apache-2.0"
name = "charming"
readme = "../README.md"
version = "0.2.4"

[dependencies]
deno_core = {version = "0.208", optional = true}
handlebars = "4.3"
image = {version = "0.24", optional = true}
macros = {path = "../macros"}
resvg = {version = "0.35", optional = true}
serde = {version = "1.0", features = ["derive"]}
serde-wasm-bindgen = {version = "0.5", optional = true}
serde_json = "1.0"
serde_v8 = {version = "0.106", optional = true}
serde_with = "3.3.0"
wasm-bindgen = {version = "0.2", optional = true}

[dependencies.web-sys]
features = [
  "Window",
  "Document",
  "Element",
]
optional = true
version = "0.3.64"

[features]
ssr = ["deno_core", "image", "resvg", "serde_v8"]
wasm = ["serde-wasm-bindgen", "wasm-bindgen", "web-sys"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
